--- a/src/ui/helpers/globalStyle/globalStyle.css
+++ b/src/ui/helpers/globalStyle/globalStyle.css
@@ -79,7 +79,7 @@ time,
 mark,
 audio,
 video {
-  font-family: "font-family you want to use";
+  font-family: "Press Start 2P" !important;
   margin: 0;
   padding: 0;
   border: 0;
@@ -89,7 +89,7 @@ video {
 }
 
 button {
-  font-family: "font-family you want to use";
+  font-family: "Press Start 2P" !important;
   font: inherit;
 }
 
